# didactic-doodle

./: README.md  TEST.md  build.ps1  package.json  package.yaml  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.scss  App.tsx  hero.ts  main.css  main.tsx
src-editor/: index.html  package.json  vite.config.ts
src-editor/src/: App.tsx  main.css  main.tsx
src-editor/src/theme/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  shared.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/utils/file/: backup.rs
src-tauri/src/utils/lark/: asar_extension.rs  file.rs  find.rs  lark.rs  mod.rs  patch.rs
src-tauri/src/utils/lark/wrappers/: session.rs
src-tauri/src/utils/log/: logger.rs
src-tauri/src/utils/platform/: mod.rs  os.rs  process.rs
src-tauri/src/utils/theme_store/: mod.rs
src/components/DoubleCheckButton/: index.scss  index.tsx
src/components/LogsView/: index.scss  index.tsx
src/components/ToolBar/: index.scss  index.tsx
src/helper/: style-scripts.ts
src/pages/LarkToolsPage/: index.scss  index.tsx
src/pages/ThemeLoaderPage/: ThemePatchView.tsx  index.scss  index.tsx  utils.ts  vm.ts
src/pages/WalSettingsPage/: index.scss  index.tsx
src/plugin/: plugin-context.ts
src/ports/: bridge.ts
src/store/: logs.ts  theme-engine.ts  theme-library.ts
src/styles/: variables.scss
src/theme/: index.ts  merge.test.ts  merge.ts  types.ts
src/utils/: path.ts  use-lark-running.ts  use-title.ts
